[package]
name = "goth-gltf"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "A lightweight, low-level reader for gltf (and glb) files"
repository = "https://github.com/expenses/goth-gltf/"
readme = "readme.md"

[dependencies]
thiserror = { version = "1.0.50", optional = true }
bytemuck = { version = "1.14.0", optional = true }
nanoserde = "0.1.35"

[features]
primitive_reader = ["bytemuck", "thiserror"]
names = []
